shellProject.output
Terminals which are not used

   AMP
   LPAREN
   VBAR
   DOT
   DEBUG
   PATH
   PROMPT
   PWD
   EXTEND
   ALIASLOOP
   QUOTE
   BACKGROUND
   BACKSLASH
   LEFTBRACE
   RIGHTBRACE
   DOLLARSIGN
   LTLT
   SPACE
   VARIABLE
   VALUE
   STRING
   OPTION
   ENVEXP


Grammar

    0 $accept: cmd $end

    1 cmd: builtin.cmd
    2    | simple.cmd
    3    | alias.cmd

    4 builtin.cmd: TILDE NEWLINE
    5            | TILDE WORD NEWLINE
    6            | CD NEWLINE
    7            | CD WORD NEWLINE
    8            | CD TILDE NEWLINE
    9            | CD TILDE WORD NEWLINE
   10            | CD PERIODPERIOD NEWLINE
   11            | CD PERIOD NEWLINE
   12            | CD PERIODPERIOD WORD NEWLINE
   13            | CD PERIOD WORD NEWLINE
   14            | BYE
   15            | NEWLINE
   16            | LS NEWLINE
   17            | LS WORD NEWLINE
   18            | LS GT WORD NEWLINE
   19            | LS GTGT WORD NEWLINE
   20            | LS WORD WORD NEWLINE
   21            | SETENV NEWLINE
   22            | SETENV WORD NEWLINE
   23            | SETENV WORD PERIOD NEWLINE
   24            | SETENV WORD WORD NEWLINE
   25            | UNSETENV NEWLINE
   26            | UNSETENV WORD NEWLINE
   27            | PRINTENV NEWLINE

   28 alias.cmd: ALIAS NEWLINE
   29          | ALIAS WORD WORD NEWLINE
   30          | UNALIAS WORD NEWLINE

   31 simple.cmd: WORD NEWLINE
   32           | WORD WORD NEWLINE
   33           | WORD GT WORD NEWLINE
   34           | WORD GTGT WORD NEWLINE
   35           | WORD LT WORD NEWLINE
   36           | WORD PIPE WORD NEWLINE


Terminals, with rules where they appear

$end (0) 0
error (256)
LT (258) 35
GT (259) 18 33
AMP (260)
LPAREN (261)
VBAR (262)
DOT (263)
DEBUG (264)
NEWLINE (265) 4 5 6 7 8 9 10 11 12 13 15 16 17 18 19 20 21 22 23 24
    25 26 27 28 29 30 31 32 33 34 35 36
TILDE (266) 4 5 8 9
LS (267) 16 17 18 19 20
PERIODPERIOD (268) 10 12
SETENV (269) 21 22 23 24
PATH (270)
PROMPT (271)
CD (272) 6 7 8 9 10 11 12 13
BYE (273) 14
ALIAS (274) 28 29
UNALIAS (275) 30
PWD (276)
EXTEND (277)
PERIOD (278) 11 13 23
ALIASLOOP (279)
UNSETENV (280) 25 26
PRINTENV (281) 27
QUOTE (282)
PIPE (283) 36
BACKGROUND (284)
BACKSLASH (285)
LEFTBRACE (286)
RIGHTBRACE (287)
DOLLARSIGN (288)
LTLT (289)
GTGT (290) 19 34
WORD (291) 5 7 9 12 13 17 18 19 20 22 23 24 26 29 30 31 32 33 34 35
    36
SPACE (292)
VARIABLE (293)
VALUE (294)
STRING (295)
OPTION (296)
ENVEXP (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
cmd (44)
    on left: 1 2 3, on right: 0
builtin.cmd (45)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27, on right: 1
alias.cmd (46)
    on left: 28 29 30, on right: 3
simple.cmd (47)
    on left: 31 32 33 34 35 36, on right: 2


state 0

    0 $accept: . cmd $end

    NEWLINE   shift, and go to state 1
    TILDE     shift, and go to state 2
    LS        shift, and go to state 3
    SETENV    shift, and go to state 4
    CD        shift, and go to state 5
    BYE       shift, and go to state 6
    ALIAS     shift, and go to state 7
    UNALIAS   shift, and go to state 8
    UNSETENV  shift, and go to state 9
    PRINTENV  shift, and go to state 10
    WORD      shift, and go to state 11

    cmd          go to state 12
    builtin.cmd  go to state 13
    alias.cmd    go to state 14
    simple.cmd   go to state 15


state 1

   15 builtin.cmd: NEWLINE .

    $default  reduce using rule 15 (builtin.cmd)


state 2

    4 builtin.cmd: TILDE . NEWLINE
    5            | TILDE . WORD NEWLINE

    NEWLINE  shift, and go to state 16
    WORD     shift, and go to state 17


state 3

   16 builtin.cmd: LS . NEWLINE
   17            | LS . WORD NEWLINE
   18            | LS . GT WORD NEWLINE
   19            | LS . GTGT WORD NEWLINE
   20            | LS . WORD WORD NEWLINE

    GT       shift, and go to state 18
    NEWLINE  shift, and go to state 19
    GTGT     shift, and go to state 20
    WORD     shift, and go to state 21


state 4

   21 builtin.cmd: SETENV . NEWLINE
   22            | SETENV . WORD NEWLINE
   23            | SETENV . WORD PERIOD NEWLINE
   24            | SETENV . WORD WORD NEWLINE

    NEWLINE  shift, and go to state 22
    WORD     shift, and go to state 23


state 5

    6 builtin.cmd: CD . NEWLINE
    7            | CD . WORD NEWLINE
    8            | CD . TILDE NEWLINE
    9            | CD . TILDE WORD NEWLINE
   10            | CD . PERIODPERIOD NEWLINE
   11            | CD . PERIOD NEWLINE
   12            | CD . PERIODPERIOD WORD NEWLINE
   13            | CD . PERIOD WORD NEWLINE

    NEWLINE       shift, and go to state 24
    TILDE         shift, and go to state 25
    PERIODPERIOD  shift, and go to state 26
    PERIOD        shift, and go to state 27
    WORD          shift, and go to state 28


state 6

   14 builtin.cmd: BYE .

    $default  reduce using rule 14 (builtin.cmd)


state 7

   28 alias.cmd: ALIAS . NEWLINE
   29          | ALIAS . WORD WORD NEWLINE

    NEWLINE  shift, and go to state 29
    WORD     shift, and go to state 30


state 8

   30 alias.cmd: UNALIAS . WORD NEWLINE

    WORD  shift, and go to state 31


state 9

   25 builtin.cmd: UNSETENV . NEWLINE
   26            | UNSETENV . WORD NEWLINE

    NEWLINE  shift, and go to state 32
    WORD     shift, and go to state 33


state 10

   27 builtin.cmd: PRINTENV . NEWLINE

    NEWLINE  shift, and go to state 34


state 11

   31 simple.cmd: WORD . NEWLINE
   32           | WORD . WORD NEWLINE
   33           | WORD . GT WORD NEWLINE
   34           | WORD . GTGT WORD NEWLINE
   35           | WORD . LT WORD NEWLINE
   36           | WORD . PIPE WORD NEWLINE

    LT       shift, and go to state 35
    GT       shift, and go to state 36
    NEWLINE  shift, and go to state 37
    PIPE     shift, and go to state 38
    GTGT     shift, and go to state 39
    WORD     shift, and go to state 40


state 12

    0 $accept: cmd . $end

    $end  shift, and go to state 41


state 13

    1 cmd: builtin.cmd .

    $default  reduce using rule 1 (cmd)


state 14

    3 cmd: alias.cmd .

    $default  reduce using rule 3 (cmd)


state 15

    2 cmd: simple.cmd .

    $default  reduce using rule 2 (cmd)


state 16

    4 builtin.cmd: TILDE NEWLINE .

    $default  reduce using rule 4 (builtin.cmd)


state 17

    5 builtin.cmd: TILDE WORD . NEWLINE

    NEWLINE  shift, and go to state 42


state 18

   18 builtin.cmd: LS GT . WORD NEWLINE

    WORD  shift, and go to state 43


state 19

   16 builtin.cmd: LS NEWLINE .

    $default  reduce using rule 16 (builtin.cmd)


state 20

   19 builtin.cmd: LS GTGT . WORD NEWLINE

    WORD  shift, and go to state 44


state 21

   17 builtin.cmd: LS WORD . NEWLINE
   20            | LS WORD . WORD NEWLINE

    NEWLINE  shift, and go to state 45
    WORD     shift, and go to state 46


state 22

   21 builtin.cmd: SETENV NEWLINE .

    $default  reduce using rule 21 (builtin.cmd)


state 23

   22 builtin.cmd: SETENV WORD . NEWLINE
   23            | SETENV WORD . PERIOD NEWLINE
   24            | SETENV WORD . WORD NEWLINE

    NEWLINE  shift, and go to state 47
    PERIOD   shift, and go to state 48
    WORD     shift, and go to state 49


state 24

    6 builtin.cmd: CD NEWLINE .

    $default  reduce using rule 6 (builtin.cmd)


state 25

    8 builtin.cmd: CD TILDE . NEWLINE
    9            | CD TILDE . WORD NEWLINE

    NEWLINE  shift, and go to state 50
    WORD     shift, and go to state 51


state 26

   10 builtin.cmd: CD PERIODPERIOD . NEWLINE
   12            | CD PERIODPERIOD . WORD NEWLINE

    NEWLINE  shift, and go to state 52
    WORD     shift, and go to state 53


state 27

   11 builtin.cmd: CD PERIOD . NEWLINE
   13            | CD PERIOD . WORD NEWLINE

    NEWLINE  shift, and go to state 54
    WORD     shift, and go to state 55


state 28

    7 builtin.cmd: CD WORD . NEWLINE

    NEWLINE  shift, and go to state 56


state 29

   28 alias.cmd: ALIAS NEWLINE .

    $default  reduce using rule 28 (alias.cmd)


state 30

   29 alias.cmd: ALIAS WORD . WORD NEWLINE

    WORD  shift, and go to state 57


state 31

   30 alias.cmd: UNALIAS WORD . NEWLINE

    NEWLINE  shift, and go to state 58


state 32

   25 builtin.cmd: UNSETENV NEWLINE .

    $default  reduce using rule 25 (builtin.cmd)


state 33

   26 builtin.cmd: UNSETENV WORD . NEWLINE

    NEWLINE  shift, and go to state 59


state 34

   27 builtin.cmd: PRINTENV NEWLINE .

    $default  reduce using rule 27 (builtin.cmd)


state 35

   35 simple.cmd: WORD LT . WORD NEWLINE

    WORD  shift, and go to state 60


state 36

   33 simple.cmd: WORD GT . WORD NEWLINE

    WORD  shift, and go to state 61


state 37

   31 simple.cmd: WORD NEWLINE .

    $default  reduce using rule 31 (simple.cmd)


state 38

   36 simple.cmd: WORD PIPE . WORD NEWLINE

    WORD  shift, and go to state 62


state 39

   34 simple.cmd: WORD GTGT . WORD NEWLINE

    WORD  shift, and go to state 63


state 40

   32 simple.cmd: WORD WORD . NEWLINE

    NEWLINE  shift, and go to state 64


state 41

    0 $accept: cmd $end .

    $default  accept


state 42

    5 builtin.cmd: TILDE WORD NEWLINE .

    $default  reduce using rule 5 (builtin.cmd)


state 43

   18 builtin.cmd: LS GT WORD . NEWLINE

    NEWLINE  shift, and go to state 65


state 44

   19 builtin.cmd: LS GTGT WORD . NEWLINE

    NEWLINE  shift, and go to state 66


state 45

   17 builtin.cmd: LS WORD NEWLINE .

    $default  reduce using rule 17 (builtin.cmd)


state 46

   20 builtin.cmd: LS WORD WORD . NEWLINE

    NEWLINE  shift, and go to state 67


state 47

   22 builtin.cmd: SETENV WORD NEWLINE .

    $default  reduce using rule 22 (builtin.cmd)


state 48

   23 builtin.cmd: SETENV WORD PERIOD . NEWLINE

    NEWLINE  shift, and go to state 68


state 49

   24 builtin.cmd: SETENV WORD WORD . NEWLINE

    NEWLINE  shift, and go to state 69


state 50

    8 builtin.cmd: CD TILDE NEWLINE .

    $default  reduce using rule 8 (builtin.cmd)


state 51

    9 builtin.cmd: CD TILDE WORD . NEWLINE

    NEWLINE  shift, and go to state 70


state 52

   10 builtin.cmd: CD PERIODPERIOD NEWLINE .

    $default  reduce using rule 10 (builtin.cmd)


state 53

   12 builtin.cmd: CD PERIODPERIOD WORD . NEWLINE

    NEWLINE  shift, and go to state 71


state 54

   11 builtin.cmd: CD PERIOD NEWLINE .

    $default  reduce using rule 11 (builtin.cmd)


state 55

   13 builtin.cmd: CD PERIOD WORD . NEWLINE

    NEWLINE  shift, and go to state 72


state 56

    7 builtin.cmd: CD WORD NEWLINE .

    $default  reduce using rule 7 (builtin.cmd)


state 57

   29 alias.cmd: ALIAS WORD WORD . NEWLINE

    NEWLINE  shift, and go to state 73


state 58

   30 alias.cmd: UNALIAS WORD NEWLINE .

    $default  reduce using rule 30 (alias.cmd)


state 59

   26 builtin.cmd: UNSETENV WORD NEWLINE .

    $default  reduce using rule 26 (builtin.cmd)


state 60

   35 simple.cmd: WORD LT WORD . NEWLINE

    NEWLINE  shift, and go to state 74


state 61

   33 simple.cmd: WORD GT WORD . NEWLINE

    NEWLINE  shift, and go to state 75


state 62

   36 simple.cmd: WORD PIPE WORD . NEWLINE

    NEWLINE  shift, and go to state 76


state 63

   34 simple.cmd: WORD GTGT WORD . NEWLINE

    NEWLINE  shift, and go to state 77


state 64

   32 simple.cmd: WORD WORD NEWLINE .

    $default  reduce using rule 32 (simple.cmd)


state 65

   18 builtin.cmd: LS GT WORD NEWLINE .

    $default  reduce using rule 18 (builtin.cmd)


state 66

   19 builtin.cmd: LS GTGT WORD NEWLINE .

    $default  reduce using rule 19 (builtin.cmd)


state 67

   20 builtin.cmd: LS WORD WORD NEWLINE .

    $default  reduce using rule 20 (builtin.cmd)


state 68

   23 builtin.cmd: SETENV WORD PERIOD NEWLINE .

    $default  reduce using rule 23 (builtin.cmd)


state 69

   24 builtin.cmd: SETENV WORD WORD NEWLINE .

    $default  reduce using rule 24 (builtin.cmd)


state 70

    9 builtin.cmd: CD TILDE WORD NEWLINE .

    $default  reduce using rule 9 (builtin.cmd)


state 71

   12 builtin.cmd: CD PERIODPERIOD WORD NEWLINE .

    $default  reduce using rule 12 (builtin.cmd)


state 72

   13 builtin.cmd: CD PERIOD WORD NEWLINE .

    $default  reduce using rule 13 (builtin.cmd)


state 73

   29 alias.cmd: ALIAS WORD WORD NEWLINE .

    $default  reduce using rule 29 (alias.cmd)


state 74

   35 simple.cmd: WORD LT WORD NEWLINE .

    $default  reduce using rule 35 (simple.cmd)


state 75

   33 simple.cmd: WORD GT WORD NEWLINE .

    $default  reduce using rule 33 (simple.cmd)


state 76

   36 simple.cmd: WORD PIPE WORD NEWLINE .

    $default  reduce using rule 36 (simple.cmd)


state 77

   34 simple.cmd: WORD GTGT WORD NEWLINE .

    $default  reduce using rule 34 (simple.cmd)
